# RoboCup

devel/: .catkin  .rosinstall  setup.sh
devel/include/decision/: Ball.h  GoalData.h  Obstacle.h  OutputData.h  Pathplaning_the.h  Pathplaning_theRequest.h  Pathplaning_theResponse.h  SerialReceived.h  UDPReceived.h  gameControl.h  gyro_euler.h  head.h  headRequest.h  headResponse.h  head_angle.h  walk.h  walkRequest.h  walkResponse.h
devel/include/fiducial_msgs/: Fiducial.h  FiducialArray.h  FiducialMapEntry.h  FiducialMapEntryArray.h  FiducialTransform.h  FiducialTransformArray.h  InitializeMapRequest.h  InitializeMapResponse.h
devel/include/gamecontroller/: gameControl.h
devel/include/head_motion/: head_control.h  head_controlRequest.h  head_controlResponse.h  head_pose.h  head_servo_angel.h
devel/include/localization/: GoalpostsDetected.h  LinesDetected.h  MeanPoseConfStamped.h  ObjectsDetected.h  ObstaclesDetected.h  OutputData.h  Particle.h  ParticleSet.h  WorldObjects.h
devel/include/vision/: Ball.h  DepthRequest.h  DepthRequestRequest.h  DepthRequestResponse.h  Goalpost.h  Landmark.h  Landmarks.h  Line.h  Lines.h  LinesLandmarks.h  Markers.h  ObjectOnImage.h  Obstacle.h  Opponents.h  field.h
devel/lib/decision/: decision_node
devel/lib/gamecontroller/: gamecontroller_node
devel/lib/head_motion/: head_control  head_follow_ball
devel/lib/localization/: behavior_head  behavior_initial_pose  data_input_output  data_input_output_sim  loc_head_odom_broadcaster  localization_visualization  particle_filter_localization
devel/lib/pkgconfig/: decision.pc  fiducial_lib.pc  fiducial_msgs.pc  fiducial_pose.pc  gamecontroller.pc  head_motion.pc  localization.pc  stereo_process.pc  vision.pc
devel/lib/vision/: aruco_camera_transform  aruco_detect_CES  aruco_detect_CES_SLAM  aruco_detect_bothCam  aruco_to_landmarks  ball_detect_CES_color  field_detect  find_lines  find_lines_landmarks
src/decision/: CMakeLists.txt
src/decision/Xabsl/: README.md  agents.xabsl  makefile  xabsl_behavior.xabsl  xabsl_symbol.xabsl
src/decision/launch/: decision_udp.launch
src/decision/msg/: Ball.msg  GoalData.msg  Obstacle.msg  OutputData.msg  SerialReceived.msg  UDPReceived.msg  gameControl.msg  gyro_euler.msg  head_angle.msg
src/decision/src/: Definitions.cpp  Definitions.h  basic_behavior.cpp  basic_behavior.h  main_node.cpp  serial_receiver.cpp  serial_receiver.h  tools.h  xabsl-debug-interface.cpp  xabsl-debug-interface.h
src/decision/srv/: Pathplaning_the.srv  head.srv  walk.srv
src/gamecontroller/: CMakeLists.txt  LICENSE
src/gamecontroller/include/: gameController.h
src/gamecontroller/msg/: .gameControl.msg.swp  gameControl.msg
src/localization/: CMakeLists.txt  CMakeLists.txt.user.3be0e41.2.5pre1
src/localization/launch/: localization_module.launch  localization_testing.launch  localization_testing_simulation.launch  localization_testing_simulation_v2.launch
src/localization/msg/: MeanPoseConfStamped.msg  ObstaclesDetected.msg  OutputData.msg  WorldObjects.msg
src/localization/src/: .particle_filter_localization.cpp.swp  .particle_filter_localization.h.swp  behavior_head.cpp  behavior_initial_pose.cpp  data_input_output _new.cpp  data_input_output.cpp  data_input_output_bk.cpp  data_input_output_old.cpp  data_input_output_sim.cpp  field_model.cpp  field_model.h  gait_odom_broadcaster_before_youbot.cpp  launch.sh  loc_head_odom_broadcaster.cpp  localization_visualization.cpp  particle_filter.h  particle_filter_localization.cpp  particle_filter_localization.h  particle_filter_localization_sim.cpp  pf_functions.h  pose_odom_estimator.cpp  readme.txt  test_odom.cpp
src/localization/src/frombfl/: bootstrap_filter_example.cpp  cognition.cpp  matrix_wrapper.h  mobile_robot.cpp  mobile_robot.h  multiple_filter_robot_localization.cpp  nonlinearMeasurementPdf.cpp  nonlinearMeasurementPdf.h  nonlinearSystemPdf.cpp  nonlinearSystemPdf.h  nonlinearanalyticconditionalgaussianmobile.cpp  nonlinearanalyticconditionalgaussianmobile.h  robot_pose_ekf_localization_tester.cpp  vector_wrapper.h
src/stereo_process/: CMakeLists.txt
src/stereo_process/launch/: bumblebee_only3d.launch  bumblebee_process.launch  bumblebee_process.launch~
src/stereo_process/msg/: Ball.msg  ObjectOnImage.msg  Obstacles.msg
src/stereo_process/src/: bumblebee_pcl_process.cpp  bumblebee_pcl_process.h  bumblebee_pcl_process_20170508.cpp  bumblebee_pcl_process_20170525.cpp  bumblebee_pcl_process_old.cpp  bumblebee_pcl_process_sphere.cpp  bumblebee_pcl_process_youbot-office_20170510.cpp  bumblebee_pcl_process_youbot2017.04.cpp  depth_request516.cpp  depth_request_6_6.cpp  depth_request_backup2018.cpp  depth_request_rosy_6_6.cpp  pcl_process_detection_old.cpp  test_depth_request.cpp
src/vision/: CMakeLists.txt  package.xml
src/vision/model/: icf_ball_model.xml  result1.C64  (+7 more)
(+296 files in other folders)
